# Salt-Engine

./: .gitignore  CMakeLists.txt  MyGame.sln  README.md  unique.txt
Bubble/: Bubble.h  Bubble.vcxproj  Bubble.vcxproj.filters  BubbleApp.cpp  BubbleApp.h  BubbleUtils.h  CMakeLists.txt
MyGame/: Background.cpp  Background.h  CMakeLists.txt  DemoUnit.cpp  DemoUnit.h  Hero.cpp  Hero.h  MyGame.vcxproj  MyGame.vcxproj.filters  MyGameApp.cpp  MyGameApp.h  SaltSpawner.cpp  SaltSpawner.h  Unit.cpp  Unit.h  Villain.cpp  Villain.h  main.cpp
MyGame/Assets/Shader/: myVertexShader.glsl
Salt/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Salt.h  Salt.vcxproj  Salt.vcxproj.filters  SaltApp.cpp  SaltApp.h  SaltUtils.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h  pch.h
Salt/GLFWimpl/: GLFWImplementation.cpp  GLFWImplementation.h
Salt/OpenGLimpl/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stb_image.h  stbi.vcxproj
