set(SOURCE_FILES SaltApp.cpp GameWindow.cpp GLFWimpl/GlfwImplementation.cpp)
set(HEADER_FILES Salt.h SaltApp.h SaltUtils.h WindowImplementation.h GameWindow.h GLFWimpl/GlfwImplementation.h)
add_library(salt_lib SHARED ${SOURCE_FILES} ${HEADER_FILES})
target_precompile_headers(salt_lib PRIVATE pch.h)
add_definitions(-DSALT_LIB)
target_link_libraries(salt_lib glfw)
include_directories(../glfw/include)
include_directories(../Salt)